--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <div class="col-md-4">
                     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTlbT0V9JxSg-twSw-oO6JIR_Lz7iUAPhqwsZI7YMBZrgpVSqJzOw" alt="Kitten image">
                     <h2>Kitten</h2>
-                    <a href="#">URL for Kitten</a>
+                    <a href="https://github.com/ABETEC/Portfolio-Site/blob/master/Kitten.jpg">Kitten</a>
                 </div>
           </div>
           </div>
