--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
             <div class="col-md-4">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTkmm9Zegs5_Uz4VitATvRzxhua9KPfKYFIgjOLwD3OXfHpSdpe" alt="Keyboard image">
             <h2>Keyboard</h2>
-            <a href="#">URL for Keyboard</a>
+            <a href="https://github.com/ABETEC/Portfolio-Site/blob/master/Key%20board.jpg">Keyboard</a>
         </div>
         <div class="row">
                 <div class="col-md-4">
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUecpFQBHWMAeJfzGtFMlsUcKgrCDI-OEJ0lFy4ktUavgjaV57AQ" alt="phone image">
                 <h2>Phone</h2>
-                <a href="">URL for Kitten</a>
+                <a href="">Phone</a>
             </div>
             <div class="row">
                     <div class="col-md-4">
